--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "gatsby-starter-portfolio-emma",
-  "description": "Gatsby Starter Portfolio Emma",
+  "name": "margaret-minsky.site",
+  "description": "Margaret Minsky web site",
   "version": "1.0.0",
-  "author": "LekoArts <hello@lekoarts.de>",
+  "author": "Margaret Minsky <marg@media.mit.edu>",
   "repository": {
-    "url": "https://github.com/LeKoArts/gatsby-starter-portfolio-emma",
+    "url": "https://github.com/margmarg/margare-minsky.site",
     "type": "git"
   },
   "dependencies": {
