--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "margaret-minsky.site",
-  "description": "Margaret Minsky web site",
+  "name": "mminsky.website",
+  "description": "Marvin Minsky essays",
   "version": "1.0.0",
   "author": "Margaret Minsky <marg@media.mit.edu>",
   "repository": {
-    "url": "https://github.com/margmarg/margare-minsky.site",
+    "url": "https://github.com/osteele/mminsky.website",
     "type": "git"
   },
   "dependencies": {
@@ -37,17 +37,11 @@
     "react-palette": "^0.1.3",
     "react-reveal": "^0.7.3"
   },
-  "keywords": [
-    "gatsby",
-    "lekoarts",
-    "portfolio",
-    "starter"
-  ],
   "license": "MIT",
-  "main": "n/a",
   "scripts": {
     "build": "gatsby build",
     "dev": "gatsby develop -o",
+    "deploy": "yarn build && netlify deploy",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write src/**/**/*.jsx",
     "lint:js": "eslint --ext .jsx --ignore-pattern public,static ."
   },
