--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^1.5.36",
     "gatsby-remark-responsive-iframe": "^1.4.16",
+    "gatsby-remark-smartypants": "^1.4.10",
     "gatsby-source-filesystem": "^1.5.11",
     "gatsby-transformer-remark": "^1.7.26",
     "gatsby-transformer-sharp": "^1.6.16",
