--- a/circle.yml
+++ b/circle.yml
@@ -29,13 +29,8 @@ jobs:
           name: Build site
           command: yarn build
 
-      - persist_to_workspace:
-          root: ./
-          paths:
-            - public
-
 deployment:
-  prod:
+  production:
     branch: master
     commands:
       - aws s3 sync public s3://minsky-bio.web/ --delete
