--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react-reveal": "^0.7.3"
   },
   "scripts": {
-    "build": "gatsby build",
+    "build": "cross-env env VIPS_WARNING=true gatsby build",
     "dev": "gatsby develop -o",
     "deploy": "yarn build && netlify deploy",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write src/**/**/*.jsx",
@@ -49,6 +49,7 @@
   "devDependencies": {
     "autoprefixer": "^7.2.3",
     "babel-preset-env": "^1.6.1",
+    "cross-env": "^5.1.3",
     "eslint": "^4.14.0",
     "eslint-plugin-react": "^7.5.1",
     "lodash": "^4.17.4",
