--- a/circle.yml
+++ b/circle.yml
@@ -21,6 +21,8 @@ jobs:
           name: Build
           command: yarn build
       - deploy:
+          name: Deploy
           command: |
+            apt-get update && apt-get install -y awscli
             aws s3 sync public s3://minsky-bio.web/ --delete
             aws cloudfront create-invalidation --distribution-id E2954NPTLAM2GP --paths '/*'
