apt-get requires sudo

--- a/circle.yml
+++ b/circle.yml
@@ -23,6 +23,6 @@ jobs:
       - deploy:
           name: Deploy
           command: |
-            apt-get update && apt-get install -y awscli
+            sudo apt-get update && sudo apt-get install -y awscli
             aws s3 sync public s3://minsky-bio.web/ --delete
             aws cloudfront create-invalidation --distribution-id E2954NPTLAM2GP --paths '/*'
