--- a/circle.yml
+++ b/circle.yml
@@ -24,5 +24,6 @@ jobs:
           name: Deploy
           command: |
             sudo apt-get update && sudo apt-get install -y awscli
+            aws configure set preview.cloudfront true
             aws s3 sync public s3://minsky-bio.web/ --delete
             aws cloudfront create-invalidation --distribution-id E2954NPTLAM2GP --paths '/*'
