--- a/circle.yml
+++ b/circle.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:9.7
+      - image: osteele/circleci-node:0.0.1
     working_directory: ~/repo
     steps:
       - checkout
@@ -10,21 +10,6 @@ jobs:
           keys:
           - v2-dependencies-{{ checksum "package.json" }}
           - v2-dependencies-
-      - run:
-          name: Install Python
-          command: |
-            sudo apt-get -y -qq update
-            sudo apt-get -y -qq install python3
-      - run:
-          name: Install pip
-          command: |
-            curl -O https://bootstrap.pypa.io/get-pip.py
-            python3 get-pip.py --user
-      - run:
-          name: Install AWS CLI
-          command: |
-            export PATH=~/.local/bin:$PATH
-            pip install -qq awscli --upgrade --user
       - run:
           name: Install node dependencies
           command: yarn install
@@ -38,6 +23,5 @@ jobs:
       - deploy:
           name: Deploy
           command: |
-            export PATH=~/.local/bin:$PATH
             aws s3 sync public s3://minsky-bio.web/ --delete
             aws cloudfront create-invalidation --distribution-id E2954NPTLAM2GP --paths '/*'
